Add `Recommend` key & add that output to alerts

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -9,6 +9,10 @@ IsUbuntu=false
 # Display a brief summary just before UbuChk closes.
 ShowSummary=true
 
+# In addition to alerting, a recommended value or action can be displayed below
+# the alert itself, if this key is enabled, which is by default.
+Recommend=true
+
 # Skip (ignore) one or more alert IDs. This key can be provided any number of
 # times, but unlike other similar keys, you may provide a comma-separated list
 # of IDs.
