--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -57,7 +57,7 @@ SkipAPT=APT::Install-Recommends
 # If enabled, performs various SSH Daemon security checks. This will check the
 # default location of the `sshd_config` configuration file, so if you've got
 # the file elsewhere, you'll want to provide it below.
-SSHServer=false
+SSHSerCli=false
 
 # Optionally, override the default location of the `sshd_config` file.
 SSHDConfig=/etc/ssh/sshd_config
@@ -88,6 +88,3 @@ SkipKMs=joydev
 # Below, you may wish to specify your own modules for which to check. This key
 # can be used multiple times, as one module per value.
 CustomKMs=
-
-# ...
-SSHClient=true
