Make a start on the disk usage section
I left a note-to-self in the code, but it'll also serve to show you
my thought process right now.

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -88,3 +88,6 @@ SkipKMs=joydev
 # Below, you may wish to specify your own modules for which to check. This key
 # can be used multiple times, as one module per value.
 CustomKMs=
+
+# ...
+DiskSpace=true
