Add `AutoQuery` key & work more on `DiskSpace`

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -89,5 +89,11 @@ SkipKMs=joydev
 # can be used multiple times, as one module per value.
 CustomKMs=
 
-# ...
+# If enabled, alert the user when there is low disk space in `/dev/sd*`
+# partitions. Loop devices and special filesystems like `tempfs` are ignored.
 DiskSpace=true
+
+# Automatically query alerts shown. When there are multiple alerts of the same
+# ID, such as with the `UnwantedPKGs` key, the query output is shown only after
+# the initial alert message.
+AutoQuery=false
