Add `QueryIndent` key

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -97,3 +97,7 @@ DiskSpace=true
 # ID, such as with the `UnwantedPKGs` key, the query output is shown only after
 # the initial alert message.
 AutoQuery=false
+
+# Specify the number of columns by which to indent the query output, or simply
+# leave it set to the default of '9'. A valid value is between `0` and `9`.
+QueryIndent=9
