Mention that REGEX is allowed for `UnwantedPKGs`

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -64,7 +64,7 @@ SSHDConfig=/etc/ssh/sshd_config
 
 # These packages are potentially unwanted, so will be checked to see if they
 # are installed. Additional packages can be provided below. You must specify
-# the exact architecture which you're targeting.
+# the exact architecture which you're targeting. REGEX is allowed here.
 UnwantedPKGs=virtualbox-guest-dkms:all
 UnwantedPKGs=virtualbox-guest-utils:all
 
