--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -65,8 +65,8 @@ SSHDConfig=/etc/ssh/sshd_config
 # These packages are potentially unwanted, so will be checked to see if they
 # are installed. Additional packages can be provided below. You must specify
 # the exact architecture which you're targeting. REGEX is allowed here.
-UnwantedPKGs=virtualbox-guest-dkms:all
-UnwantedPKGs=virtualbox-guest-utils:all
+UnwantedPKGs=^virtualbox-guest-dkms:all$
+UnwantedPKGs=^virtualbox-guest-utils:all$
 
 # If enabled, check that the Uncomplicated FireWall (UFW) service (unit) is
 # active. If the UFW executable is not found in PATH, then this check will be
