Add `DSLimit` key & finish `DiskSpace` section

--- a/source/ubuchk.conf
+++ b/source/ubuchk.conf
@@ -93,6 +93,10 @@ CustomKMs=
 # partitions. Loop devices and special filesystems like `tempfs` are ignored.
 DiskSpace=true
 
+# The percentage a partition must be full before `DiskSpace` warnings appear.
+# The default value is `90`. A valid value is between `10` and `100`.
+DSLimit=90
+
 # Automatically query alerts shown. When there are multiple alerts of the same
 # ID, such as with the `UnwantedPKGs` key, the query output is shown only after
 # the initial alert message.
