Change to sane file names & add shiny polish

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -1,4 +1,4 @@
-#cito M:644 O:0 G:0 T:/usr/share/ubuchk/ubuchk.conf
+#cito M:644 O:0 G:0 T:/usr/share/ubuchk/config
 # User configuration file for UbuChk ($CurVer)
 
 # Since we're intended for use on Ubuntu-based distributions, an error will
