Add `SkipSysD` key & Fix Spacing Bugs (again?)
I believe I've sorted all but one of the conditions under which the
line spacing was a bit wonky. The remaining one is when the summary is
shown and verbose mode is active, but the summary is directly below an
`Info()` message.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -38,6 +38,9 @@ PathPerms=true
 SSHDConfig=/etc/ssh/sshd_config
 SSHSerCli=true
 
+# SystemD
+SkipSysD=
+SystemD=true
+
 # Miscellaneous
 Firewall=true
-SystemD=true
