Fix query display bug, and add 2 new keys
BugFixes:

  * Fixed bug causing query output to be missing some pipes (`|`).

Features:

  * Added `MountHome` & `SkipMountOpts` to check `/home` mount options.
  * Updated `database` and `config` with new keys. (not manpage yet)

CodeBits:

  * Remove header TODOs which are no longer relevant.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -49,6 +49,10 @@ BatCrit=10
 BatLow=20
 Laptop=true
 
+# Mount Options
+MountHome=true
+SkipMountOpts=
+
 # Miscellaneous
 Firewall=true
 ProcVuln=true
