--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -61,6 +61,9 @@ CPUTemp=true
 CoreTempCrit=70
 TempScale=C
 
+# RootKits, Worms, etc
+RootKits=true
+
 # Miscellaneous
 Firewall=true
 ProcVuln=true
