Make too many changes to sum up here...
BugFixes:

  * Fixed what is now `InitialDirs()` ignoring the current directory.

Features:

  * TFL now has `CelsFahr()`, `GetDirSize()`, and `InitialDirs()`.
  * Updated `database`, man page, and `config` with new key stuff.
  * Better-worded user configuration generation message.

CodeBits:

  * Cleared out subroutines now part of TFL, saving a few lines.
  * Tidied up, thanks to `qw{}` the `use TFL` part.
  * Removed unnecessary single quotes when using hashes.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -19,6 +19,8 @@ DSLimit=90
 DiskSpace=true
 HomeCache=true
 HomeCacheMBLimit=100
+ThumbMBLimit=40
+Thumbnails=true
 
 # Package Management
 HardAPT=true
