Add several features, fixes, and tweaks to UbuChk
BugFixes:

  * Fixed summary not pluralizing properly -- now using `time(s)`.
  * Corrected alert IDs in database, as 7129 was duplicated.

Features:

  * Updated the manual page, including better formatting.
  * Added `DpkgConf` & `SkipDpkgOpts` keys.
  * Added more `Info()` calls & improved some existing ones.
  * Infection detection section is now much improved.
  * Updated alerts 3790, 3791, & 9708, in the database.
  * Add checks for 12 more rootkits, worms, trojans, etc.
  * The `AptCache` key now lists files found & their sizes, if verbose.
  * Enabled previously disabled `Info()` calls. (last time, I swear!)
  * By default ignoring the ever-annoying `fs.protected*` parameters.
  * Added more `UnwantedPKGs` keys & tidied up REGEX of previous ones.

CodeBits:

  * Tweaked various bits of code, such as tightening up argument area.
  * Removed `InitialDirs()` from `TFL` use, as `GetDirSize()` does it.
  * Added TODOs and removed an older, undecided TODO.
  * Updated header to reflect UbuChk's current development status.
  * Renamed `Temperatures` section in default `config` to `Sensors`.
  * The `README.md` file was updated to correct the dependencies.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -1,5 +1,5 @@
 #cito M:644 O:0 G:0 T:/usr/share/ubuchk/config
-# User configuration file for UbuChk (>= 2020-02-20)
+# User configuration file for UbuChk (>= 2020-02-22)
 # Refer to ubuchk(8) to learn about these settings.
 
 # Core Settings
@@ -17,24 +17,33 @@ DSLimit=90
 DiskSpace=true
 HomeCache=true
 HomeCacheMBLimit=100
-ThumbMBLimit=40
+ThumbsMBLimit=40
 Thumbnails=true
 
 # Package Management
+DpkgConf=true
 HardAPT=true
 PurgeChk=true
 SkipAPT=APT::Install-Recommends
-UnwantedPKGs=^kerneloops.*
+SkipDpkgOpts=
+UnwantedPKGs=^command-not-found
+UnwantedPKGs=^kerneloops
+UnwantedPKGs=^memtest86
 UnwantedPKGs=^popularity-contest
-UnwantedPKGs=^telnet.*
-UnwantedPKGs=^virtualbox-guest-.*
+UnwantedPKGs=^python3-commandnotfound$
+UnwantedPKGs=^telnet
+UnwantedPKGs=^time$
+UnwantedPKGs=^virtualbox-guest-
+UnwantedPKGs=^whoopsie
+UnwantedPKGs=^xul-ext-ubufox$
 
 # Kernel
 CustomKMs=
 KernMods=true
 KernParams=true
 SkipKMs=joydev
-SkipKP=
+SkipKP=fs.protected_hardlinks
+SkipKP=fs.protected_symlinks
 
 # Mode, Owner, and Group
 DirPerms=true
@@ -58,7 +67,7 @@ Laptop=true
 MountHome=true
 SkipMountOpts=
 
-# Temperatures
+# Sensors
 CPUTemp=true
 CoreTempCrit=70
 TempScale=C
