Add `AppArmor` key and rename `Firewall` to `UFW`
Also slightly reorganized the code to combine `AppArmor` and `UFW` keys
into a services/units section, to make things easier to work with.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -86,8 +86,11 @@ Swaps=false
 ChkPasswd=true
 ID0NonRoots=true
 
+# Units/Services
+AppArmor=true
+Firewall=true
+
 # Miscellaneous
 CMOS=false
-Firewall=true
 LightDM=true
 ProcVuln=true
