Add more unwanted packages & update `postinst`
The packages added here are for security reasons, and are often
recommended by many places to be removed, due to them being unsecure
and/or dated, such as RSH and the ancient Telnet.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -26,14 +26,19 @@ HardAPT=true
 PurgeChk=true
 SkipAPT=APT::Install-Recommends
 SkipDpkgOpts=
+UnwantedPKGs=^atftpd$
 UnwantedPKGs=^kerneloops
+UnwantedPKGs=^nis$
 UnwantedPKGs=^popularity-contest
 UnwantedPKGs=^rsh-
 UnwantedPKGs=^telnet
+UnwantedPKGs=^tftpd
 UnwantedPKGs=^time$
 UnwantedPKGs=^virtualbox-guest-
 UnwantedPKGs=^whoopsie
+UnwantedPKGs=^xinetd$
 UnwantedPKGs=^xul-ext-ubufox$
+UnwantedPKGs=^yp-tools$
 
 # Kernel
 CustomKMs=
