--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -1,14 +1,28 @@
 #cito M:644 O:0 G:0 T:/usr/share/ubuchk/config
-# User configuration file for UbuChk (>= 2020-03-07)
+# User configuration file for UbuChk (>= 2020-03-09)
 # Refer to ubuchk(8) to learn about these settings.
 
 # Core Settings
+ANSIColors=true
 AutoQuery=false
 ForceRun=false
-QueryIndent=8
+QueryIndent=6
 Recommend=true
 SkipIDs=
 Verbose=false
+
+# Characters
+Char_Margin=+
+
+# ANSI Colors
+Color_AlertBracket=red
+Color_AlertID=bright_red
+Color_AlertTTL=bright_white
+Color_AlertTTLText=white
+Color_AlertText=
+Color_AlertRecommend=bright_green
+Color_QueryText=white
+Color_QueryMargin=bright_black
 
 # Disk Usage
 AptCache=true
