--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -1,5 +1,5 @@
 #cito M:644 O:0 G:0 T:/usr/share/ubuchk/config
-# User configuration file for UbuChk (>= 2020-03-10)
+# User configuration file for UbuChk (>= 2020-03-12)
 # Refer to ubuchk(8) to learn about these settings.
 
 # Core Settings
@@ -8,6 +8,7 @@ AutoQuery=false
 ForceRun=false
 QueryIndent=6
 Recommend=true
+ShowTTL=true
 SkipIDs=
 Verbose=false
 
@@ -34,25 +35,45 @@ HomeCacheMBLimit=100
 Thumbnails=true
 ThumbsMBLimit=40
 
-# Package Management
+# Packaging Configurations
 DpkgConf=true
 HardAPT=true
 PurgeChk=true
 SkipAPT=APT::Install-Recommends
 SkipDpkgOpts=
-UnwantedPKGs=^atftpd$
-UnwantedPKGs=^kerneloops
-UnwantedPKGs=^nis$
-UnwantedPKGs=^popularity-contest
-UnwantedPKGs=^rsh-
-UnwantedPKGs=^telnet
-UnwantedPKGs=^tftpd
-UnwantedPKGs=^time$
-UnwantedPKGs=^virtualbox-guest-
-UnwantedPKGs=^whoopsie
-UnwantedPKGs=^xinetd$
-UnwantedPKGs=^xul-ext-ubufox$
-UnwantedPKGs=^yp-tools$
+
+# Potentially Unwanted Packages
+UnwantedPKGs=atftpd
+UnwantedPKGs=kerneloops
+UnwantedPKGs=kerneloops-applet
+UnwantedPKGs=kerneloops-daemon
+UnwantedPKGs=nis
+UnwantedPKGs=popularity-contest
+UnwantedPKGs=rsh-client
+UnwantedPKGs=rsh-redone-client
+UnwantedPKGs=rsh-redone-server
+UnwantedPKGs=rsh-server
+UnwantedPKGs=telnet
+UnwantedPKGs=telnet-ssl
+UnwantedPKGs=telnetd
+UnwantedPKGs=telnetd-ssl
+UnwantedPKGs=tftpd
+UnwantedPKGs=tftpd-hpa
+UnwantedPKGs=time
+UnwantedPKGs=virtualbox-guest-additions-iso
+UnwantedPKGs=virtualbox-guest-dkms
+UnwantedPKGs=virtualbox-guest-dkms-hwe
+UnwantedPKGs=virtualbox-guest-source
+UnwantedPKGs=virtualbox-guest-source-hwe
+UnwantedPKGs=virtualbox-guest-utils
+UnwantedPKGs=virtualbox-guest-utils-hwe
+UnwantedPKGs=virtualbox-guest-x11
+UnwantedPKGs=virtualbox-guest-x11-hwe
+UnwantedPKGs=whoopsie
+UnwantedPKGs=whoopsie-preferences
+UnwantedPKGs=xinetd
+UnwantedPKGs=xul-ext-ubufox
+UnwantedPKGs=yp-tools
 
 # Kernel
 CustomKMs=
