Reword suggested package removal message
The UbuChk man page has also been edited to reflect these changes, and
a disclaimer provided under the 'UnwantedPKGs' key. The given package
'whoopsie-preferences' line has been commented out by default in the
config.

--- a/source/ubuchk/config
+++ b/source/ubuchk/config
@@ -70,7 +70,7 @@ UnwantedPKGs=virtualbox-guest-utils-hwe
 UnwantedPKGs=virtualbox-guest-x11
 UnwantedPKGs=virtualbox-guest-x11-hwe
 UnwantedPKGs=whoopsie
-UnwantedPKGs=whoopsie-preferences
+#UnwantedPKGs=whoopsie-preferences
 UnwantedPKGs=xinetd
 UnwantedPKGs=xul-ext-ubufox
 UnwantedPKGs=yp-tools
